Make vertical and horizontal alignment layout fixes for the circle thumbnails on the home page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -73,6 +73,7 @@ h1.bannerHeader {
 
 img.circleThumb {
   border: 4px solid #ddd;
+  max-width: 115px;
 }
 img.circleThumb:hover {
   border: 4px solid #888;
@@ -191,30 +192,6 @@ ul#even-more-info{ font-size:80%;text-align:center;}
 img#small-logo {
   margin: -15px 0 0 0;
   padding:0;
-}
-div#splash-img{
-  margin: 50px 0;
-  text-align: center;
-}
-
-div#splash-img div {
-  display: inline-block;
-  margin: 0 10px;
-  min-width: 100px;
-  text-align: center;
-  width: 100px;
-}
-
-div#splash-img a {
-  cursor: pointer;
-  text-decoration: none;
-}
-div#splash-img a:hover {
-  opacity: .7;
-}
-div#splash-img a img{
-  height: 100%;
-  width: 100%;
 }
 
 img#cnaSlice{
